--- a/style/commun-small.css
+++ b/style/commun-small.css
@@ -34,6 +34,7 @@
 
  #asideNav {
         float:left;
+        width : 30%;
 }
 
 
